Fix layout issues.
- Adjust padding in forecast table columns
- Size body to prevent unnecessary vertical scrolling in landscape orientation.

--- a/assets/style.css
+++ b/assets/style.css
@@ -140,7 +140,7 @@ rect.inclement {
 #forecast thead tr td {
     background: lightgray;
     border-bottom: 1px solid black;
-    padding-right: 7px;
+    /* padding-right: 7px; */
 }
 
 #forecast table tr:nth-child(even) {
